--- a/plot_examples.ipynb
+++ b/plot_examples.ipynb
@@ -233,7 +233,7 @@
    "metadata": {},
    "source": [
     "### 上述的圖表在MOZE裡面應該都有，但轉成結構化物件後就方便做自己客製化的表，例如:\n",
-    "可以畫出類似薪水MoM或YoY成長圖，這裡用下午茶來試試看"
+    "可以畫出類似薪水MoM或YoY成長圖，這裡以主類別-飲食，子類別-下午茶來當範例"
    ]
   },
   {
